src/components/TabbedContent.scss
@import "../common_css/common-variables";

ul.tabbed_content_label_bar {
  position: relative;
  left: -38px;
  z-index: 1;
  margin-left: 15px;
  overflow: hidden;
}

li.tab_label {
  display: inline-block;
  padding: 5px 20px 3px 20px;
  margin-left: -2px;
  margin-right: 1px;
  border-top-left-radius: 30px;
  border-top-right-radius: 30px;
  border: 1px solid $backgroundColor;
  border-bottom-width: 0px !important;
  background-color: $primaryColor;
  transition: background-color 125ms ease, border-radius 250ms ease;
  color: $backgroundColor;
  height: 28px;
  padding-bottom: 100%;
  margin-bottom: -100%;
  cursor: pointer;
  & > .tab_label_text {
    text-decoration: none !important;
    color: inherit !important;
    cursor: pointer;
  }
}

li.tab_label.active_tab {
  border-top-left-radius: 15px;
  border-top-right-radius: 15px;
  border: 1px solid $primaryColor;
  background-color: $backgroundColor;
  transition: background-color 200ms ease, border-radius 400ms ease;
  color: #333;
  cursor: default;
  & > .tab_label_text {
    cursor: default;
  }
}

div.tabbed_content_pane {
  position: relative;
  top: -13px;
  border-top: 1px solid $primaryColor;
  border-radius: 0px 0px 5px 5px;
  padding: 15px 35px 0px 35px;
  background-color: $backgroundColor;

  @media(max-width: 992px){
    padding-right: 1rem;
    padding-left: 1rem;
  }
}

